Fix Now Viewing menu when scrollbars appear.

--- a/src/Styles/NowViewingTab.less
+++ b/src/Styles/NowViewingTab.less
@@ -127,9 +127,9 @@
 }
 
 .now-viewing-action-menu {
-    padding-left: 10px;
     margin-top: 5px;
-    margin-left: 155px;
+    text-align: right;
+    padding-right: 16px;
     color: @highlight-color;
 }
 
